--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "Project developed during NodeJs Course",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -e ts -w ./src -x npm run watch:serve",
+    "watch:serve": "node --loader ts-node/esm src/index.ts",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
+    "test:e2e": "jest src/task4/service/e2e/index.test.ts",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "type": "module",
   "author": "Liliya Pandova",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.27",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "axios": "^1.6.7"
   }
 }
