--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Project developed during NodeJs Course",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "pm2 start server.js --name nodeJsCourse",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stop": "pm2 stop nodeJsCourse",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "type": "module",
   "author": "Liliya Pandova",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pm2": "^5.3.1"
+  },
+  "dependencies": {
+    "uuid": "^9.0.1"
   }
 }
